--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,6 @@ section{
     padding-top: 70px;
 }
 .home h1.heading{
-
     text-shadow: 0px 1px 0px #CCC;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -129,7 +128,7 @@ section{
     border-right: 5px solid gray;
 }
 .home .slider{
-    margin-top: 25px;
+    margin-top: 10px;
     width: 250px;
     height: 250px;
 }
@@ -144,10 +143,10 @@ section{
     transition: all 0.2s ease-in-out 0s;
 }
 .home .name{
-    margin-bottom: 50px;
     text-shadow:0 1px 1px rgba(0,0,0,.3);
 }
 .home .info h3{
+    margin: 10px;
     cursor: pointer;
     text-shadow:0 2px 1px rgba(0,0,0,.3);
 }
@@ -161,6 +160,20 @@ section{
 }
 .home .contact li:hover{
     color: blue;
+}
+.link{
+    margin: 0 auto;
+    width: 300px;
+    height: 80px;
+}
+.link li{
+    margin-left: 40px;
+    float: left;
+    list-style: none;
+}
+.link li img{
+    width: 50px;
+    height: 80px;
 }
 .copyright{
     position: fixed;
@@ -208,6 +221,12 @@ section{
 }
 .courses{
     padding-bottom: 50px;
+}
+.map{
+    border-radius: 10px;
+    margin: 0px auto;
+    height: 135px;
+    width: 100%;
 }
 @media (max-width:768px){
     .copyright{
